// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DeleteServerButton /> > renders expected content 1`] = `
<button
  class="tw:text-danger tw:hover:underline"
  type="button"
>
  Foo bar
</button>
`;

exports[`<DeleteServerButton /> > renders expected content 2`] = `
<button
  class="tw:text-danger tw:hover:underline"
  type="button"
>
  baz
</button>
`;

exports[`<DeleteServerButton /> > renders expected content 3`] = `
<button
  class="tw:text-danger tw:hover:underline"
  type="button"
>
  something
</button>
`;
